cluster/default/makeawish/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: le-wildcard-issuer
    kubernetes.io/ingress.class: nginx
  name: makeawish
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: makeawish.52poke.net
    http:
      paths:
      - backend:
          service:
            name: makeawish
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - makeawish.52poke.net
    secretName: makeawish-tls
